# AstroParse

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  docker.sh
.github/workflows/: build.yaml
astroparse/: BUILD.bazel  astroparse.cc
docker/: Dockerfile
llvm/: BUILD.bazel  MODULE.bazel
parse/: BUILD.bazel  ast_consumer.cc  ast_consumer.h  ast_fronten_action.cc  ast_fronten_action.h  ast_visitor.cc  ast_visitor.h  function_info.h  util.cc  util.h
scripts/: build.sh  build_image.sh  test.sh  update_compile_commands.sh
