cc_library(
    name = "clang_libs",
    linkopts = [
        "-L/usr/lib/llvm-20/lib",
        "-Wl,--start-group",
        "-lclangAPINotes",
        "-lclangARCMigrate",
        "-lclangAST",
        "-lclangASTMatchers",
        "-lclangAnalysis",
        "-lclangBasic",
        "-lclangCodeGen",
        "-lclangCrossTU",
        "-lclangDependencyScanning",
        "-lclangDirectoryWatcher",
        "-lclangDriver",
        "-lclangDynamicASTMatchers",
        "-lclangEdit",
        "-lclangFormat",
        "-lclangFrontend",
        "-lclangFrontendTool",
        "-lclangHandleCXX",
        "-lclangHandleLLVM",
        "-lclangIndex",
        "-lclangInterpreter",
        "-lclangLex",
        "-lclangTooling",
        "-lclangToolingCore",
        "-lclangToolingInclusions",
        "-lclangToolingRefactoring",
        "-lclangToolingSyntax",
        "-lclangParse",
        "-lclangRewrite",
        "-lclangRewriteFrontend",
        "-lclangSema",
        "-lclangSerialization",
        "-lclangSupport",
        "-lLLVM-20",
        "-Wl,--end-group",
        "-ldl",
        "-lpthread",
        "-lrt",
        "-ltinfo",
        "-lm",
        "-lncurses",
    ],
    visibility = ["//visibility:public"],
)
